# volterra

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.wolf/: anatomy.md  buglog.json  cerebrum.md  memory.md
docs/superpowers/plans/: 2026-03-20-volterra-3d-sprint.md  2026-03-26-membrane-nematic-dec.md
docs/superpowers/specs/: 2026-03-20-volterra-3d-sprint-design.md  2026-03-26-membrane-nematic-dec-design.md  2026-04-09-benchmark-suite-design.md
examples/: bench_passive_3d.rs
tests/: test_3d_bindings.py
tools/viz/: README.md  pipeline.py  render_2d.py  render_3d.py  render_surface.py  render_surface_pv.py
volterra/: Cargo.toml  README.md
volterra-braid/: Cargo.toml  README.md
volterra-braid/examples/: bench_braid.rs  braid_demo.py  braid_demo.rs
volterra-braid/oracle/: README.md  bench_braid.py  braid_tracker_v2.py  compare_cgpo.py  cross_check.py
volterra-braid/oracle/concurrence/: README.md  observables.py  patch_flow_solver.py
volterra-braid/src/: braidword.rs  defect.rs  entropy.rs  lib.rs  synthetic.rs  track.rs
volterra-braid/tests/: golden.rs  silver.rs
volterra-cgpo/: COMPARISON.md  Cargo.toml
volterra-cgpo/benches/: cgpo_bench.rs
volterra-cgpo/src/: bc.rs  boundary.rs  error.rs  guard.rs  index.rs  lib.rs  nematic.rs  ops.rs  output.rs  par_gate.rs  sim_step.rs  step.rs  stokes.rs
volterra-cgpo/tests/: boundary.rs  nematic.rs  ops.rs  parallel_kernels.rs  step.rs  step_debug.rs  stokes.rs  test_bc.rs  test_cgpo_step.rs  test_cli_smoke.rs  test_error.rs  test_guard.rs  test_index.rs  test_params_serde.rs  test_smoke.rs
volterra-cgpo/tests/ref/: H_ref.txt  Pi_A_ref.txt  Pi_S_ref.txt  Q_input.txt  S_ref.txt  bnd_inner_normals.txt  bnd_outer_normals.txt  dbg_H_after_HS.txt  dbg_H_after_Hbc.txt  dbg_Pi_A.txt  dbg_Pi_S.txt  dbg_Q_ic.txt  dbg_dQdt.txt  dbg_dudt.txt  dbg_inner_mask.txt  dbg_inner_normals.txt  dbg_inside_mask.txt  dbg_outer_mask.txt  dbg_outer_normals.txt  dbg_p_after_relax.txt  dbg_p_rhs.txt  dudt_ref.txt  dump_nematic.py  dump_step.py  dump_step_debug.py  dump_step_p.py  dump_step_p2.py  dump_stokes.py  p_after_N_ref.txt  p_rhs_ref.txt  step_H.txt  step_Pi_A.txt  step_Pi_S.txt  step_Q_ic.txt  step_Q_ref.txt  step_p_nobc.txt  step_p_ref.txt  step_p_rhs.txt  step_p_withbc.txt  step_u_ref.txt  (+3 more)
volterra-core/: Cargo.toml  README.md
volterra-core/src/: lib.rs  nematic_params.rs
volterra-core/src/sim/: integrate.rs  mod.rs  noise.rs  runner.rs  snapshot.rs  stats.rs
volterra-dec/: Cargo.toml  README.md
volterra-dec/src/: boundary_conditions.rs  connection_laplacian.rs  curvature_correction.rs  curved_stokes.rs  domain.rs  epitrochoid.rs  evolving_domain.rs  helfrich.rs  lib.rs  mesh_gen.rs  molecular_field_dec.rs  nematic_field_2d.rs  poisson.rs  qfield_dec.rs  semi_lagrangian.rs  snapshot.rs  stokes_dec.rs  stokes_trait.rs  variational.rs
volterra-dec/tests/: domain_test.rs  test_analytic_sphere.rs  test_analytic_torus.rs  test_convergence.rs  test_evolving_domain.rs  test_known_bug_curved_poisson.rs  test_nematic_field_2d.rs  test_qfield_dec.rs
volterra-dec/tests/support/: mod.rs
volterra-fields/: Cargo.toml  README.md
volterra-fields/src/: fields3d.rs  lib.rs  qfield3d.rs
volterra-mars/: Cargo.toml
volterra-mars/src/: lib.rs
volterra-py/: Cargo.toml  README.md  pyproject.toml
volterra-py/python/: volterra.pyi
volterra-py/src/: bindings_3d.rs  braid.rs  lib.rs
volterra-py/tests/: test_3d.py  test_braid.py  test_fields.py  test_params.py  test_runners.py
volterra-solver/: Cargo.toml  README.md
volterra-solver/benches/: solver_bench.rs
volterra-solver/examples/: bench_convergence.rs  bench_large_n.rs  bench_passive_3d.rs  bench_scaling.rs  engine_sphere.rs  sim_3d_fiber_bundle.rs  sim_active_deforming.rs  sim_deforming_sphere.rs  sim_sphere.rs  sim_sphere_zhu.rs  sim_torus.rs  sim_wet_2d.rs  sweep_sphere.rs  zhu_sphere.rs
volterra-solver/src/: active_nematic_engine.rs  beris_3d.rs  ch_3d.rs  defects_3d.rs  engine.rs  gauss_bonnet_3d.rs  lib.rs  mol_field_3d.rs  nematic_field_2d.rs  runner_3d.rs  runner_dec.rs  runner_dec_wet.rs  stokes_3d.rs  stokes_trait.rs
volterra-solver/src/sim_impls/: cartesian2d.rs  cartesian3d.rs  dec.rs  mod.rs
volterra-solver/tests/: golden_cartesian2d_bech.rs  golden_cartesian2d_dry.rs  golden_cartesian2d_wet.rs  golden_cartesian3d_bech.rs  golden_cartesian3d_dry.rs  golden_dec.rs  perf_floor.rs  test_active_nematic_engine.rs  test_dec_nephroid_smoke.rs  test_nematic_field_2d.rs  test_rotor_connection_regression.rs  test_runner_dec.rs  test_runner_dec_wet.rs  test_spatial_zeta.rs  test_stats_from.rs
volterra/src/: cli.rs  lib.rs
volterra/tests/: test_cli_parse.rs  test_cli_run_2d.rs  test_cli_run_3d.rs  test_cli_run_cgpo.rs  test_cli_run_dec.rs
