[workspace]
resolver = "2"
members = [
    "volterra",
    "volterra-core",
    "volterra-dec",
    "volterra-fields",
    "volterra-solver",
    "volterra-py",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/alejandro-soto-franco/volterra"
keywords = ["active-matter", "nematohydrodynamics", "riemannian", "simulation", "physics"]
categories = ["science", "mathematics", "simulation"]

[workspace.dependencies]
cartan-core      = { git = "https://github.com/alejandro-soto-franco/cartan", rev = "b4c6946" }
cartan-manifolds = { git = "https://github.com/alejandro-soto-franco/cartan", rev = "b4c6946" }
cartan-geo       = { git = "https://github.com/alejandro-soto-franco/cartan", rev = "b4c6946" }

# ── Local dev override ────────────────────────────────────────────────────────
# Uncomment to use in-tree cartan changes without pushing first.
# [patch."https://github.com/alejandro-soto-franco/cartan"]
# cartan-core      = { path = "/home/alejandrosotofranco/cartan/cartan-core" }
# cartan-manifolds = { path = "/home/alejandrosotofranco/cartan/cartan-manifolds" }
# cartan-geo       = { path = "/home/alejandrosotofranco/cartan/cartan-geo" }
nalgebra         = { version = "0.33", features = ["std"] }
rayon            = "1"
thiserror        = "2"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
approx           = "0.5"
rand             = { version = "0.9", features = ["small_rng"] }
rustfft          = "6"
pyo3             = { version = "0.25", features = ["extension-module", "abi3-py310"] }
numpy            = "0.25"
