[workspace]
resolver = "2"
members = [
    "volterra",
    "volterra-core",
    "volterra-dec",
    "volterra-fields",
    "volterra-mars",
    "volterra-solver",
    "volterra-py",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/alejandro-soto-franco/volterra"
homepage = "https://github.com/alejandro-soto-franco/volterra"
documentation = "https://docs.rs/volterra"
readme = "README.md"
keywords = ["active-matter", "nematohydrodynamics", "riemannian", "simulation", "physics"]
categories = ["science", "mathematics", "simulation"]

[workspace.dependencies]
cartan-core      = "0.3"
cartan-manifolds = "0.3"
cartan-geo       = "0.3"
cartan-dec       = "0.3"
cartan-remesh    = "0.3"

nalgebra         = { version = "0.33", features = ["std"] }
rayon            = "1"
thiserror        = "2"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
approx           = "0.5"
rand             = { version = "0.9", features = ["small_rng"] }
rustfft          = "6"
pyo3             = { version = "0.25", features = ["extension-module", "abi3-py310"] }
numpy            = "0.25"

# Uncomment to use in-tree cartan changes without pushing first.
# [patch.crates-io]
# cartan-core      = { path = "/home/alejandrosotofranco/cartan/cartan-core" }
# cartan-manifolds = { path = "/home/alejandrosotofranco/cartan/cartan-manifolds" }
# cartan-geo       = { path = "/home/alejandrosotofranco/cartan/cartan-geo" }
# cartan-dec       = { path = "/home/alejandrosotofranco/cartan/cartan-dec" }
# cartan-remesh    = { path = "/home/alejandrosotofranco/cartan/cartan-remesh" }
