[package]
name = "volterra-braid"
description = "Braid-group analysis of active-nematic defect trajectories: detection, tracking, braid-word extraction, and topological entropy."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
nalgebra = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
