[package]
name = "volterra-cgpo"
description = "Nephroid-confined CGPO finite-difference solver (Beris-Edwards + relaxation Stokes)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
volterra-core = { path = "../volterra-core", version = "0.3.0" }
thiserror     = { workspace = true }
ndarray    = { version = "0.17", features = ["rayon"] }
rayon      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
rand       = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "cgpo_bench"
harness = false
