[package]
name = "volterra-dec"
description = "Discrete exterior calculus layer: simplicial complexes, Hodge operators, and covariant differential operators on Riemannian manifolds"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
volterra-core    = { path = "../volterra-core",   version = "0.2.0" }
cartan-core      = { workspace = true }
cartan-manifolds = { workspace = true }
cartan-dec       = { workspace = true }
cartan-remesh    = { workspace = true }
nalgebra         = { workspace = true }
rand             = { workspace = true }
rayon            = { workspace = true }
delaunator       = "1"
sprs             = "0.11"
sprs-ldl         = "0.10"
serde_json       = { workspace = true }
thiserror        = { workspace = true }
serde            = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
