[package]
name = "volterra-dec"
description = "DEC physics layer: Q-tensor fields, Stokes solvers, BVH semi-Lagrangian advection, Helfrich energy, and variational integrators on triangle meshes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
volterra-core    = { path = "../volterra-core",   version = "0.2.0" }
cartan-core      = { workspace = true }
cartan-manifolds = { workspace = true }
cartan-dec       = { workspace = true }
cartan-remesh    = { workspace = true }
nalgebra         = { workspace = true }
rand             = { workspace = true }
rayon            = { workspace = true }
delaunator       = "1"
sprs             = "0.11"
sprs-ldl         = "0.10"
serde_json       = { workspace = true }
thiserror        = { workspace = true }
serde            = { workspace = true }
num-complex      = "0.4"

[dev-dependencies]
approx = { workspace = true }
