[package]
name = "volterra-fields"
description = "Tensor field types on Cartesian grids: Q-tensor, velocity, pressure, and scalar fields for 2D/3D active nematics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
volterra-core    = { path = "../volterra-core",   version = "0.2.0" }
cartan-core      = { workspace = true }
cartan-geo       = { workspace = true }
nalgebra         = { workspace = true }
rayon            = { workspace = true }
thiserror        = { workspace = true }
serde            = { workspace = true }
rand             = { workspace = true }

[dev-dependencies]
approx           = { workspace = true }
