[package]
name = "volterra-py"
description = "Python bindings for the volterra active nematics simulation library"
version             = "0.3.0"
edition.workspace   = true
rust-version.workspace = true
license.workspace   = true
repository.workspace = true

# cdylib is required for PyO3 extension modules.
[lib]
name = "volterra"
crate-type = ["cdylib"]

[dependencies]
volterra-core   = { path = "../volterra-core",   version = "0.3.0" }
volterra-fields = { path = "../volterra-fields", version = "0.3.0" }
volterra-solver = { path = "../volterra-solver", version = "0.3.0" }
cartan-geo      = { workspace = true }
pyo3            = { workspace = true, features = ["extension-module"] }
numpy           = { workspace = true }
