[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "volterra-nematic"
requires-python = ">=3.10"
dependencies = ["numpy>=1.20"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Physics",
]
version = "0.2.0"
description = "Python bindings for the volterra active nematics simulation library"
license = { text = "MIT" }

[tool.maturin]
features = []
manifest-path = "Cargo.toml"
module-name = "volterra"
