[package]
name = "volterra"
description = "Covariant active nematics simulation on Riemannian manifolds"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
volterra-core    = { path = "../volterra-core",   version = "0.3.0" }
volterra-fields  = { path = "../volterra-fields", version = "0.3.0" }
volterra-solver  = { path = "../volterra-solver", version = "0.3.0" }
volterra-cgpo    = { path = "../volterra-cgpo",   version = "0.3.0" }
volterra-dec     = { path = "../volterra-dec",    version = "0.3.0" }
cartan-core      = { workspace = true }
cartan-dec       = { workspace = true }
cartan-manifolds = { workspace = true }
clap             = { version = "4", features = ["derive"] }
serde            = { workspace = true }
serde_json       = { workspace = true }
toml             = "0.8"

[[bin]]
name = "volterra"
path = "src/bin/volterra.rs"
